
Moqui Framework Release Notes

===========================================================================
Release 1.1.2 - TBA
===========================================================================

This release includes:

- Updated jQuery to 1.8.2 and jQuery UI to 1.9.0
- Inline and script services can leave out parameter values in the context
  and they will be picked up, instead of setting explicitly in result Map
- When auto-parameters has an entity-name specified the generated
  parameters will have entity-name and field-name attributes, and the
  auto-fields-service now looks for those to do better fields based on the
  entity field details
- Moved JS file reference to webroot.xml isntead of in the theme; all
  themes need them, and they are more closely related to HTML generated
- Added subscreens.always-use-full-path attribute to use the full path in
  menus and such instead of minimal path; helpful for wiki and other
  screens that use relative URLs that are not based on the screen path
- Fleshed out ValidationError functionality including display in apps.xml
  and considering the ec.message.validationErrors list for storing error
  details in session between redirects, and changed entity and service
  validation to add ValidationErrors instead of plain error Strings


Non-backward-compatible changes:

- Changed *SubscreensItem.userId* to *userGroupId* for greater flexibility
  setting up subscreen structures and menus
-- this is consistent with how other database-driven artifacts are
   structured
-- to have a record apply to all users use the ALL_USERS userGroupId that
   all users are automatically a member of
-- for migrating other data a user will have to be a member of a group and
   that group can be a single-user group or you can simplify existing data
   by consolidating users into groups that have the same subscreens

Bug Fixes:

- Fixed bug where secondary sequened ID (setSequencedIdSecondary() method)