@@ -15,6 +15,6 @@ This Work includes contributions authored by David E. Jones, not as a
         default-menu-title="System">
     <subscreens default-item="Cache"/>
     <widgets>
-        <subscreens-panel/>
+        <subscreens-panel id="system-panel" type="popup" title="System" menu-width="220px"/>
     </widgets>
 </screen>
